Cleanup NetconfConsoleUtils
We have a few strange methods here, clean them up to streamline.

Change-Id: Icf0ca4661d4b62cf9e3855af99a6611d1b719869
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>